<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReleaseMoneyAct">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="175dp"
        android:layout_height="69dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="₱500"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/releaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/brown"
        android:text="@string/release_amount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="56dp"
            android:layout_height="61dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/backicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="201dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/cardimage"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="-60dp"
                android:background="@drawable/gcashpic"
                android:contentDescription="@string/cardimage"
                android:orientation="horizontal">

            </ImageView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_type"

                    android:layout_marginRight="5dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/jobtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gcash"
                    android:textColor="@color/black"
                    android:textSize="16sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="110dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/jobAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="140dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_amount"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginRight="5dp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/jobPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="500"
                    android:textColor="@color/black"
                    android:textSize="16sp"></TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
